--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
+    "@vitest/coverage-istanbul": "^1.5.2",
     "eslint": "^8.56.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "vitest": "^1.5.2"
+  },
+  "scripts": {
+    "test": "vitest run --coverage --typecheck"
   }
 }
