--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "js-utils",
   "packageManager": "yarn@4.1.1",
   "devDependencies": {
+    "@types/node": "^20.12.11",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "@vitest/coverage-istanbul": "^1.5.2",
