--- a/package.json
+++ b/package.json
@@ -1,17 +1,72 @@
 {
   "name": "js-utils",
-  "packageManager": "yarn@4.1.1",
+  "description": "A state-of-the-art, high-performance JavaScript utility library featuring robust type annotations and straightforward implementations.",
+  "version": "0.0.1",
+  "packageManager": "yarn@4.2.2",
+  "exports": {
+    ".": "./src/index.ts",
+    "./array": "./src/array/index.ts",
+    "./function": "./src/function/index.ts",
+    "./math": "./src/math/index.ts",
+    "./object": "./src/object/index.ts",
+    "./predicate": "./src/predicate/index.ts",
+    "./promise": "./src/promise/index.ts",
+    "./package.json": "./package.json"
+  },
+  "publishConfig": {
+    "exports": {
+      ".": {
+        "import": "./esm/index.mjs",
+        "require": "./dist/index.js"
+      },
+      "./array": {
+        "import": "./esm/array/index.mjs",
+        "require": "./dist/array/index.js"
+      },
+      "./function": {
+        "import": "./esm/function/index.mjs",
+        "require": "./dist/function/index.js"
+      },
+      "./math": {
+        "import": "./esm/math/index.mjs",
+        "require": "./dist/math/index.js"
+      },
+      "./object": {
+        "import": "./esm/object/index.mjs",
+        "require": "./dist/object/index.js"
+      },
+      "./predicate": {
+        "import": "./esm/predicate/index.mjs",
+        "require": "./dist/predicate/index.js"
+      },
+      "./promise": {
+        "import": "./esm/promise/index.mjs",
+        "require": "./dist/promise/index.js"
+      },
+      "./package.json": "./package.json"
+    }
+  },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-typescript": "^7.24.1",
+    "@toss/rollup-config": "^0.2.0",
+    "@types/babel__core": "^7",
+    "@types/babel__preset-env": "^7",
     "@types/node": "^20.12.11",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "@vitest/coverage-istanbul": "^1.5.2",
     "eslint": "^8.56.0",
     "prettier": "^3.2.5",
+    "rollup": "^2.78.0",
     "typescript": "^5.4.5",
     "vitest": "^1.5.2"
   },
+  "sideEffects": false,
   "scripts": {
+    "prepack": "yarn build",
+    "build": "rm -rf dist esm && tsc -p tsconfig.json --declaration --emitDeclarationOnly --declarationDir dist && rollup -c rollup.config.js",
     "test": "vitest run --coverage --typecheck"
   }
 }
