--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-utils",
+  "name": "es-lib",
   "description": "A state-of-the-art, high-performance JavaScript utility library featuring robust type annotations and straightforward implementations.",
   "version": "0.0.1",
   "packageManager": "yarn@4.2.2",
