--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
     "@toss/rollup-config": "0.2.0-canary.0",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
+    "@types/broken-link-checker": "^0",
     "@types/lodash": "^4",
     "@types/node": "^20.12.11",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "@vitest/coverage-istanbul": "^1.5.2",
+    "broken-link-checker": "^0.7.8",
     "eslint": "^8.56.0",
     "lodash": "^4.17.21",
     "prettier": "^3.2.5",
