Revert "fix: remove unnecessary exports overriding"
This reverts commit f8534a14c18fc4e176b3587fac44797b7407402b.

--- a/package.json
+++ b/package.json
@@ -7,34 +7,13 @@
   ],
   "packageManager": "yarn@4.2.2",
   "exports": {
-    ".": {
-      "import": "./esm/index.mjs",
-      "require": "./dist/index.js"
-    },
-    "./array": {
-      "import": "./esm/array/index.mjs",
-      "require": "./dist/array/index.js"
-    },
-    "./function": {
-      "import": "./esm/function/index.mjs",
-      "require": "./dist/function/index.js"
-    },
-    "./math": {
-      "import": "./esm/math/index.mjs",
-      "require": "./dist/math/index.js"
-    },
-    "./object": {
-      "import": "./esm/object/index.mjs",
-      "require": "./dist/object/index.js"
-    },
-    "./predicate": {
-      "import": "./esm/predicate/index.mjs",
-      "require": "./dist/predicate/index.js"
-    },
-    "./promise": {
-      "import": "./esm/promise/index.mjs",
-      "require": "./dist/promise/index.js"
-    },
+    ".": "./src/index.ts",
+    "./array": "./src/array/index.ts",
+    "./function": "./src/function/index.ts",
+    "./math": "./src/math/index.ts",
+    "./object": "./src/object/index.ts",
+    "./predicate": "./src/predicate/index.ts",
+    "./promise": "./src/promise/index.ts",
     "./package.json": "./package.json"
   },
   "files": [
@@ -42,7 +21,38 @@
     "esm/**/*"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "exports": {
+      ".": {
+        "import": "./esm/index.mjs",
+        "require": "./dist/index.js"
+      },
+      "./array": {
+        "import": "./esm/array/index.mjs",
+        "require": "./dist/array/index.js"
+      },
+      "./function": {
+        "import": "./esm/function/index.mjs",
+        "require": "./dist/function/index.js"
+      },
+      "./math": {
+        "import": "./esm/math/index.mjs",
+        "require": "./dist/math/index.js"
+      },
+      "./object": {
+        "import": "./esm/object/index.mjs",
+        "require": "./dist/object/index.js"
+      },
+      "./predicate": {
+        "import": "./esm/predicate/index.mjs",
+        "require": "./dist/predicate/index.js"
+      },
+      "./promise": {
+        "import": "./esm/promise/index.mjs",
+        "require": "./dist/promise/index.js"
+      },
+      "./package.json": "./package.json"
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
