--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
   "sideEffects": false,
   "scripts": {
     "prepack": "yarn build",
-    "build": "rm -rf dist esm && tsc -p tsconfig.json --declaration --emitDeclarationOnly --declarationDir dist && rollup -c rollup.config.js && ./.scripts/postbuild.sh",
+    "build": "tsup && ./.scripts/postbuild.sh",
     "test": "vitest run --coverage --typecheck",
     "lint": "eslint ./src --ext .ts"
   }
