style(*): Apply eslint rule (#22)
* chore: apply eslint rule for src/ files

* chore: add eslint script for checking lint

* chore: update typescript-eslint rule with error to warn

* Update src/predicate/isNil.ts

* Update src/predicate/isNotNil.ts

* Update package.json

---------

Co-authored-by: Sojin Park <raon0211@gmail.com>
Co-authored-by: Sojin Park <raon0211@toss.im>

--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
   "scripts": {
     "prepack": "yarn build",
     "build": "tsup && ./.scripts/postbuild.sh",
-    "test": "vitest run --coverage --typecheck"
+    "test": "vitest run --coverage --typecheck",
+    "lint": "eslint ./src --ext .ts"
   }
 }
