--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,12 @@ jobs:
             '.version = .version + "-dev." + $build + "+" + $commit' \
             package.json > package.json.tmp
           mv package.json.tmp package.json
+          jq \
+            --arg build "$GITHUB_RUN_NUMBER" \
+            --arg commit "${GITHUB_SHA::8}" \
+            '.version = .version + "-dev." + $build + "+" + $commit' \
+            jsr.json > jsr.json.tmp
+          mv jsr.json.tmp jsr.json
       - run: yarn install
       - run: 'mkdir -p out && yarn pack --out out/%s-%v.tgz'
       - id: extract-changelog
@@ -63,6 +69,7 @@ jobs:
           else
             npm publish --access public --tag dev *.tgz
           fi
+          deno task publish --allow-dirty
         env:
           NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         working-directory: ${{ github.workspace }}/out/
