chore(ci): add Prettier format check to CI workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,15 @@ jobs:
       - run:
           name: Lint
           command: yarn eslint -c .eslintrc.js $(git diff --name-only --diff-filter=ACMRUXB origin/main | grep -E "(.js$|.ts$|.tsx$)")
+  formatcheck:
+    docker:
+      - image: cimg/node:20.12
+    steps:
+      - checkout
+      - setup
+      - run:
+          name: Format Check
+          command: yarn prettier --check $(git diff --name-only --diff-filter=ACMRUXB origin/main | grep -E "(.js$|.ts$|.tsx$)")
   typecheck:
     docker:
       - image: cimg/node:20.12
