--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "@babel/preset-typescript": "^7.24.1",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/broken-link-checker": "^0",
@@ -147,7 +148,11 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsdoc": "^48.5.0",
+    "glob": "^11.0.0",
     "prettier": "^3.2.5",
+    "rollup": "^4.18.1",
+    "rollup-plugin-dts": "^6.1.1",
+    "tslib": "^2.6.3",
     "tsup": "^8.2.0",
     "typescript": "^5.4.5",
     "vitest": "^1.5.2"
