build: Add build for browsers

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
+    "browser": "./umd/browser.global.js",
     "exports": {
       ".": {
         "import": {
