prepack: use rollup instead of tsup

--- a/package.json
+++ b/package.json
@@ -152,17 +152,16 @@
     "eslint-plugin-jsdoc": "^48.5.0",
     "glob": "^11.0.0",
     "prettier": "^3.2.5",
-    "rollup": "^4.18.1",
+    "rollup": "^4.19.0",
     "rollup-plugin-dts": "^6.1.1",
     "tslib": "^2.6.3",
-    "tsup": "^8.2.0",
     "typescript": "^5.4.5",
     "vitest": "^1.5.2"
   },
   "sideEffects": false,
   "scripts": {
     "prepack": "yarn build",
-    "build": "tsup && ./.scripts/postbuild.sh",
+    "build": "rollup -c rollup.config.mjs && ./.scripts/postbuild.sh",
     "test": "vitest run --coverage --typecheck",
     "bench": "vitest bench",
     "lint": "eslint ./src --ext .ts",
