test(ci): check the generated dist and package.tgz (#288)
* test(ci): add @arethetypeswrong/cli check of package.tgz

* chore(ci): run attw before release

* test(ci): add minimal check-dist test to pre-pack

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,13 @@ jobs:
       - setup
       - run:
           name: Build
-          command: yarn build
+          command: yarn pack --out package.tgz
+      - run:
+          name: Check Dist
+          command: node --test .scripts/check-dist.mjs
+      - run:
+          name: Check Package Types
+          command: yarn attw package.tgz
   check-peer:
     docker:
       - image: cimg/node:20.12
