--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "@types/babel__preset-env": "^7",
     "@types/broken-link-checker": "^0",
     "@types/node": "^20.12.11",
+    "@types/tar": "^6.1.13",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "@vitest/coverage-istanbul": "^1.5.2",
@@ -148,7 +149,9 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jsdoc": "^48.5.0",
+    "execa": "^9.3.0",
     "prettier": "^3.2.5",
+    "tar": "^6",
     "tsup": "^8.1.0",
     "typescript": "^5.4.5",
     "vitest": "^1.5.2"
