--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "files": [
     "dist",
+    "umd",
     "*.d.ts"
   ],
   "publishConfig": {
@@ -137,6 +138,8 @@
     "@babel/preset-typescript": "^7.24.1",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/broken-link-checker": "^0",
@@ -151,7 +154,10 @@
     "eslint-plugin-jsdoc": "^48.5.0",
     "execa": "^9.3.0",
     "prettier": "^3.2.5",
+    "rollup": "^4.19.0",
+    "rollup-plugin-dts": "^6.1.1",
     "tar": "^6",
+    "tslib": "^2.6.3",
     "tsup": "^8.1.0",
     "typescript": "^5.4.5",
     "vitest": "^1.5.2"
@@ -159,7 +165,7 @@
   "sideEffects": false,
   "scripts": {
     "prepack": "yarn build",
-    "build": "tsup && ./.scripts/postbuild.sh",
+    "build": "rollup -c rollup.config.mjs && ./.scripts/postbuild.sh",
     "test": "vitest run --coverage --typecheck",
     "bench": "vitest bench",
     "lint": "eslint ./src --ext .ts",
