chore: move browser build from umd dir to dist

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   },
   "files": [
     "dist",
-    "umd",
     "*.d.ts"
   ],
   "publishConfig": {
@@ -36,7 +35,7 @@
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
-    "browser": "./umd/browser.global.js",
+    "browser": "./dist/browser.global.js",
     "exports": {
       ".": {
         "import": {
