revert: Revert Sandpack components, since it currently breaks the build
Revert "docs: Implement Sandpack component for interactive examples in documentation (#338)"

This reverts commit db79ff335534f5b263ebde11e5c633aee7ad58b0.

--- a/docs/package.json
+++ b/docs/package.json
@@ -2,10 +2,7 @@
   "name": "docs",
   "private": true,
   "devDependencies": {
-    "markdown-it-container": "^4.0.0",
-    "vitepress": "^1.2.2",
-    "vitepress-plugin-sandpack": "^1.1.4",
-    "vue": "^3.4.34"
+    "vitepress": "^1.2.2"
   },
   "scripts": {
     "docs:dev": "vitepress dev",
