--- a/package.json
+++ b/package.json
@@ -137,21 +137,22 @@
     "@babel/preset-typescript": "^7.24.1",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
+    "@eslint/js": "^9.9.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/broken-link-checker": "^0",
+    "@types/eslint": "^9",
     "@types/node": "^20.12.11",
     "@types/tar": "^6.1.13",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
     "@vitest/coverage-istanbul": "^1.5.2",
     "broken-link-checker": "^0.7.8",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jsdoc": "^48.5.0",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsdoc": "^50.2.2",
     "execa": "^9.3.0",
+    "globals": "^15.9.0",
     "prettier": "^3.2.5",
     "rollup": "^4.19.0",
     "rollup-plugin-dts": "^6.1.1",
@@ -159,6 +160,7 @@
     "tslib": "^2.6.3",
     "tsup": "^8.1.0",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^8.1.0",
     "vitest": "^1.5.2"
   },
   "sideEffects": false,
@@ -167,7 +169,7 @@
     "build": "rollup -c rollup.config.mjs && ./.scripts/postbuild.sh",
     "test": "vitest run --coverage --typecheck",
     "bench": "vitest bench",
-    "lint": "eslint ./src --ext .ts",
+    "lint": "eslint --config eslint.config.mjs",
     "format": "prettier --write ."
   }
 }
