--- a/docs/package.json
+++ b/docs/package.json
@@ -2,6 +2,8 @@
   "name": "docs",
   "private": true,
   "devDependencies": {
+    "@typescript-eslint/parser": "^8.3.0",
+    "comment-parser": "^1.4.1",
     "markdown-it-container": "^4.0.0",
     "vitepress": "^1.3.2",
     "vitepress-plugin-sandpack": "^1.1.4",
