--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "rollup-plugin-dts": "^6.1.1",
     "tar": "^6",
     "tslib": "^2.6.3",
+    "tsx": "^4.19.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^8.1.0",
     "vitest": "^1.5.2"
