--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src", ".scripts/**/*"]
+  "include": ["src", ".scripts/**/*"],
+  "exclude": [".scripts/docs/**/*"]
 }
