--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "@types/node": "^20.12.11",
     "@types/tar": "^6.1.13",
     "@vitest/coverage-istanbul": "^1.5.2",
+    "ast-types": "^0.14.2",
     "broken-link-checker": "^0.7.8",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
@@ -169,6 +170,7 @@
     "bench": "vitest bench",
     "lint": "eslint --config eslint.config.mjs",
     "format": "prettier --write .",
-    "transform": "jscodeshift -t ./.scripts/tests/transform-lodash-test.ts $0 && prettier --write $0"
+    "transform": "jscodeshift -t ./.scripts/tests/transform-lodash-test.ts $0 && prettier --write $0",
+    "fp": "sh ./.scripts/fp/create-fp-version.sh $0"
   }
 }
