--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsdoc": "^50.2.2",
     "eslint-plugin-vue": "^9.28.0",
+    "eslint-prefer-for-over-array": "^0.0.1",
     "execa": "^9.3.0",
     "globals": "^15.9.0",
     "jscodeshift": "^17.0.0",
