--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsdoc": "^50.2.2",
+    "eslint-plugin-no-for-of-array": "^0.0.1",
     "eslint-plugin-vue": "^9.28.0",
     "execa": "^9.3.0",
     "globals": "^15.9.0",
