--- a/package.json
+++ b/package.json
@@ -137,17 +137,19 @@
     "@eslint/js": "^9.9.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/broken-link-checker": "^0",
     "@types/eslint": "^9",
     "@types/jscodeshift": "^0.11.11",
     "@types/node": "^20.12.11",
     "@types/tar": "^6.1.13",
     "@vitest/coverage-istanbul": "^1.5.2",
+    "@vue/compiler-sfc": "^3.5.10",
     "broken-link-checker": "^0.7.8",
     "eslint": "^9.9.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsdoc": "^50.2.2",
     "eslint-plugin-no-for-of-array": "^0.0.1",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.28.0",
     "execa": "^9.3.0",
     "globals": "^15.9.0",
@@ -171,5 +173,13 @@
     "lint": "eslint --config eslint.config.mjs",
     "format": "prettier --write .",
     "transform": "jscodeshift -t ./.scripts/tests/transform-lodash-test.ts $0 && prettier --write $0"
+  },
+  "dependenciesMeta": {
+    "@trivago/prettier-plugin-sort-imports@4.3.0": {
+      "unplugged": true
+    }
+  },
+  "dependencies": {
+    "eslint-config-prettier": "^9.1.0"
   }
 }
