--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "@vue/compiler-sfc": "^3.5.10",
     "broken-link-checker": "^0.7.8",
     "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsdoc": "^50.2.2",
     "eslint-plugin-no-for-of-array": "^0.0.1",
     "eslint-plugin-prettier": "^5.2.1",
@@ -164,6 +165,11 @@
     "typescript-eslint": "^8.1.0",
     "vitest": "^1.5.2"
   },
+  "dependenciesMeta": {
+    "@trivago/prettier-plugin-sort-imports@4.3.0": {
+      "unplugged": true
+    }
+  },
   "sideEffects": false,
   "scripts": {
     "prepack": "yarn build",
@@ -173,13 +179,5 @@
     "lint": "eslint --config eslint.config.mjs",
     "format": "prettier --write .",
     "transform": "jscodeshift -t ./.scripts/tests/transform-lodash-test.ts $0 && prettier --write $0"
-  },
-  "dependenciesMeta": {
-    "@trivago/prettier-plugin-sort-imports@4.3.0": {
-      "unplugged": true
-    }
-  },
-  "dependencies": {
-    "eslint-config-prettier": "^9.1.0"
   }
 }
