--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "globals": "^15.9.0",
     "jscodeshift": "^17.0.0",
     "prettier": "^3.2.5",
+    "prettier-plugin-sort-re-exports": "^0.0.1",
     "rollup": "^4.19.0",
     "rollup-plugin-dts": "^6.1.1",
     "tar": "^6",
@@ -167,6 +168,9 @@
   },
   "dependenciesMeta": {
     "@trivago/prettier-plugin-sort-imports@4.3.0": {
+      "unplugged": true
+    },
+    "prettier-plugin-sort-re-exports@0.0.1": {
       "unplugged": true
     }
   },
