chore: Update .gitignore and add bench-runner script
- Update .gitignore to include .bench-bundle file
- Add new script .scripts/bench-runner.mjs for running benchmarks
- Update benchmarks/package.json to add devDependencies
- Add new benchmark file benchmarks/performance/bench.ts
- Update package.json to add new devDependencies
- Update rollup.config.mjs to export entrypoints
- Update yarn.lock to add new devDependencies

--- a/benchmarks/package.json
+++ b/benchmarks/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4",
-    "@types/lodash-es": "^4"
+    "@types/lodash-es": "^4",
+    "tinybench": "^2.9.0"
   }
 }
