--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src", ".scripts/**/*", "benchmarks/**/*"],
+  "include": ["src", ".scripts/**/*"],
   "exclude": [".scripts/docs/**/*"]
 }
