--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "./predicate": "./src/predicate/index.ts",
     "./promise": "./src/promise/index.ts",
     "./string": "./src/string/index.ts",
+    "./util": "./src/util/index.ts",
     "./package.json": "./package.json"
   },
   "files": [
@@ -115,6 +116,16 @@
         "require": {
           "types": "./dist/string/index.d.ts",
           "default": "./dist/string/index.js"
+        }
+      },
+      "./util": {
+        "import": {
+          "types": "./dist/util/index.d.mts",
+          "default": "./dist/util/index.mjs"
+        },
+        "require": {
+          "types": "./dist/util/index.d.ts",
+          "default": "./dist/util/index.js"
         }
       },
       "./compat": {
