--- a/benchmarks/package.json
+++ b/benchmarks/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4",
-    "@types/lodash-es": "^4"
+    "@types/lodash-es": "^4",
+    "rfdc": "^1.4.1"
   }
 }
