feat. add pipe.lazy

--- a/benchmarks/package.json
+++ b/benchmarks/package.json
@@ -9,10 +9,12 @@
     "esbuild": "0.23.0",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "ramda": "^0.30.1",
     "vitest": "^2.1.2"
   },
   "devDependencies": {
     "@types/lodash": "^4",
-    "@types/lodash-es": "^4"
+    "@types/lodash-es": "^4",
+    "@types/ramda": "^0"
   }
 }
