--- a/package.json
+++ b/package.json
@@ -2,20 +2,17 @@
   "name": "es-toolkit",
   "description": "A state-of-the-art, high-performance JavaScript utility library with a small bundle size and strong type annotations.",
   "version": "1.27.0",
+  "private": true,
   "homepage": "https://es-toolkit.slash.page",
   "bugs": "https://github.com/toss/es-toolkit/issues",
-  "private": true,
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/toss/es-toolkit.git"
-  },
+  "repository": "https://github.com/toss/es-toolkit.git",
   "license": "MIT",
   "workspaces": [
     "docs",
     "benchmarks",
     "packages/*"
   ],
-  "packageManager":  "yarn@1.22.19",
+  "packageManager": "yarn@1.22.19",
   "exports": {
     ".": "./src/index.ts",
     "./array": "./src/array/index.ts",
@@ -144,7 +141,6 @@
     }
   },
   "devDependencies": {
-    "some-package": "workspace:^1.0.0",
     "@arethetypeswrong/cli": "^0.15.3",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
@@ -168,11 +164,13 @@
     "eslint-plugin-vue": "^9.28.0",
     "execa": "^9.3.0",
     "globals": "^15.9.0",
+    "jest": "^29.7.0",
     "jscodeshift": "^17.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-sort-re-exports": "^0.1.0",
     "rollup": "^4.19.0",
     "rollup-plugin-dts": "^6.1.1",
+
     "tar": "^6",
     "tslib": "^2.6.3",
     "tsx": "^4.19.0",
@@ -192,10 +190,12 @@
   "scripts": {
     "prepack": "yarn build",
     "build": "rollup -c rollup.config.mjs && ./.scripts/postbuild.sh",
-    "test": "vitest --coverage --typecheck",
+    "test": "vitest --coverage --typecheck jest",
     "bench": "vitest bench",
     "lint": "eslint --config eslint.config.mjs",
     "format": "prettier --write .",
     "transform": "jscodeshift -t ./.scripts/tests/transform-lodash-test.ts $0 && prettier --write $0"
-  }
+  },
+  "main": "index.js",
+  "author": "jodasom <jodasom0216@gmail.com>"
 }
