--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "benchmarks"
   ],
   "packageManager": "yarn@4.2.2",
+  "react-native": "./dist/index.js",
   "exports": {
     ".": "./src/index.ts",
     "./array": "./src/array/index.ts",
