--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,31 +1,31 @@
 npmScopes:
   jsr:
-    npmRegistryServer: "https://npm.jsr.io"
+    npmRegistryServer: 'https://npm.jsr.io'
 
 packageExtensions:
-  "@algolia/autocomplete-core@1.9.3":
+  '@algolia/autocomplete-core@1.9.3':
     dependencies:
-      "@algolia/client-search": latest
+      '@algolia/client-search': latest
       algoliasearch: latest
       search-insights: latest
-  "@algolia/autocomplete-plugin-algolia-insights@1.9.3":
+  '@algolia/autocomplete-plugin-algolia-insights@1.9.3':
     dependencies:
-      "@algolia/client-search": latest
+      '@algolia/client-search': latest
       algoliasearch: latest
-  "@docsearch/react@3.6.1":
+  '@docsearch/react@3.6.1':
     dependencies:
-      "@algolia/client-search": latest
-  "@vueuse/core@10.11.1":
-    dependencies:
-      vue: latest
-  "@vueuse/integrations@10.11.1":
+      '@algolia/client-search': latest
+  '@vueuse/core@10.11.1':
     dependencies:
       vue: latest
-  "@vueuse/shared@10.11.1":
+  '@vueuse/integrations@10.11.1':
+    dependencies:
+      vue: latest
+  '@vueuse/shared@10.11.1':
     dependencies:
       vue: latest
   sandpack-vue3@3.1.11:
     dependencies:
-      "@lezer/common": latest
+      '@lezer/common': latest
 
 yarnPath: .yarn/releases/yarn-4.7.0.cjs
