--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "tsx": "^4.19.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.6.0",
+    "vercel": "^41.4.1",
     "vitest": "^2.1.2"
   },
   "dependenciesMeta": {
