fix: Fix ignored files

--- a/.gitignore
+++ b/.gitignore
@@ -23,14 +23,14 @@ umd
 .env
 .vite-node
 .vercel
-compat
-array.js
-compat.js
-error.js
-function.js
-math.js
-object.js
-predicate.js
-promise.js
-string.js
-util.js
+/compat
+/array.js
+/compat.js
+/error.js
+/function.js
+/math.js
+/object.js
+/predicate.js
+/promise.js
+/string.js
+/util.js
